# attoutils

./: Cargo.toml  README.md
cat/: Cargo.toml
cat/src/: main.rs
column/: Cargo.toml
column/src/: lib.rs  main.rs
libatto/: Cargo.toml
libatto/src/: columnate.rs  lib.rs
ls/: Cargo.toml
ls/src/: lib.rs  main.rs
sh/: Cargo.toml
sh/src/: main.rs
sort/: Cargo.toml
sort/src/: main.rs
trs/: Cargo.toml
trs/src/: lib.rs  main.rs
walk/: Cargo.toml
walk/src/: main.rs
